--- a/app/src/main/res/layout/activity_joincall.xml
+++ b/app/src/main/res/layout/activity_joincall.xml
@@ -16,10 +16,10 @@
            android:layout_height="match_parent"
            android:layout_above="@+id/iconpadding">
            <ImageView
-               android:layout_width="@dimen/remote_back_icon_size"
-               android:layout_height="@dimen/remote_back_icon_size"
+               android:layout_width="250dp"
+               android:layout_height="250dp"
                android:layout_centerInParent="true"
-               android:src="@drawable/ic_pick"/>
+               android:src="@drawable/nouser"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
@@ -39,7 +39,7 @@
         android:layout_marginEnd="@dimen/local_preview_margin_right"
         android:layout_marginRight="@dimen/local_preview_margin_right"
         android:layout_marginTop="@dimen/local_preview_margin_top"
-        android:background="@color/teal_200"
+        android:background="@color/black"
         >
         <ImageView
             android:layout_width="@dimen/local_back_icon_size"
@@ -62,8 +62,8 @@
             android:src="@drawable/ic_pick"
             android:scaleType="centerCrop"/>
         <ImageView
-            android:layout_width="@dimen/other_button_size"
-            android:layout_height="@dimen/other_button_size"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/switch_camera"
             android:layout_toRightOf="@+id/btn_call"
             android:layout_toEndOf="@+id/btn_call"
@@ -73,8 +73,8 @@
             android:src="@drawable/ic_turn_camera"
             android:scaleType="centerCrop"/>
         <ImageView
-            android:layout_width="@dimen/other_button_size"
-            android:layout_height="@dimen/other_button_size"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/btn_mute"
             android:layout_toLeftOf="@+id/btn_call"
             android:layout_toStartOf="@+id/btn_call"
