--- a/app/src/main/res/layout/chat_personal.xml
+++ b/app/src/main/res/layout/chat_personal.xml
@@ -8,6 +8,7 @@
     <TextView
         android:id="@+id/chat_personal"
         android:padding="3dp"
+        android:textIsSelectable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
