--- a/app/src/main/res/layout/one_chat.xml
+++ b/app/src/main/res/layout/one_chat.xml
@@ -14,6 +14,7 @@
         android:id="@+id/one_chat"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:textStyle="bold"
         android:textColor="@android:color/black"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/user_image"
