Audio call enabled

--- a/app/src/main/res/layout/activity_joincall.xml
+++ b/app/src/main/res/layout/activity_joincall.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:keepScreenOn="true"
     android:layout_height="match_parent"
     tools:context=".JoinCallActivity">
 
@@ -52,18 +53,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="@dimen/control_bottom_margin">
         <ImageView
-            android:layout_width="@dimen/call_button_size"
-            android:layout_height="@dimen/call_button_size"
-            android:layout_centerInParent="true"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:onClick="onCallClicked"
             android:id="@+id/btn_call"
-            android:src="@drawable/ic_pick"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_endcall"
             android:scaleType="centerCrop"/>
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:id="@+id/switch_camera"
             android:layout_toRightOf="@+id/btn_call"
             android:layout_toEndOf="@+id/btn_call"
@@ -73,8 +75,8 @@
             android:src="@drawable/ic_turn_camera"
             android:scaleType="centerCrop"/>
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:id="@+id/btn_mute"
             android:layout_toLeftOf="@+id/btn_call"
             android:layout_toStartOf="@+id/btn_call"
@@ -83,6 +85,17 @@
             android:layout_centerVertical="true"
             android:scaleType="centerCrop"
             android:onClick="onLocalAudioMuteClicked"/>
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/video_off"
+            android:layout_toRightOf="@+id/switch_camera"
+            android:layout_toEndOf="@+id/switch_camera"
+            android:layout_marginLeft="@dimen/control_bottom_horizontal_margin"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_video_off"
+            android:onClick="onVideoOffClicked"
+            android:scaleType="centerCrop"/>
 
     </RelativeLayout>
 
