--- a/app/src/main/res/layout/activity_joincall.xml
+++ b/app/src/main/res/layout/activity_joincall.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:keepScreenOn="true"
     android:layout_height="match_parent"
-    tools:context=".JoinCallActivity">
+    tools:context=".Activity.JoinCallActivity">
 
    <RelativeLayout
        android:id="@+id/remote_video_view_container"
