--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent">
     <ImageView
         android:layout_width="wrap_content"
@@ -9,16 +10,17 @@
         android:src="@mipmap/ic_launcher"
         android:layout_marginTop="90dp"
         android:layout_centerHorizontal="true"
-        android:id="@+id/iconlogo"
-        />
+        android:id="@+id/iconlogo" />
 
     <EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
+        android:textColor="@color/black"
+        android:textColorHint="@android:color/darker_gray"
         android:layout_height="wrap_content"
         android:layout_below="@id/iconlogo"
         android:layout_marginTop="30dp"
-        android:hint="Email"
+        android:hint="Enter Email"
         android:paddingLeft="10dp"
         android:paddingTop="15dp" />
 
@@ -26,9 +28,11 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textColorHint="@android:color/darker_gray"
         android:layout_below="@+id/email"
         android:layout_marginTop="27dp"
-        android:hint="Password"
+        android:hint="Enter Password"
         android:paddingLeft="10dp"
         android:inputType="textPassword"
         android:paddingTop="15dp" />
@@ -40,22 +44,16 @@
         android:layout_marginTop="15dp"
         android:layout_below="@+id/password"
         android:layout_centerHorizontal="true"/>
-
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Create Account"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:gravity="center_horizontal"
+        android:textSize="20sp"
         android:layout_alignParentBottom="true"
         android:id="@+id/create"
         android:layout_centerHorizontal="true"
         />
-
-
-
-
-
-
 </RelativeLayout>
