--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent">
     <TextView
         android:layout_width="wrap_content"
@@ -16,8 +17,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/register"
+        android:textColor="@color/black"
+        android:textColorHint="@android:color/darker_gray"
         android:layout_marginTop="30dp"
-        android:hint="Name"
+        android:hint="Enter Name"
         android:paddingLeft="10dp"
         android:paddingTop="15dp" />
     <EditText
@@ -25,8 +28,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/name"
+        android:textColor="@color/black"
+        android:textColorHint="@android:color/darker_gray"
         android:layout_marginTop="30dp"
-        android:hint="Email"
+        android:hint="Enter Email"
         android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
         android:paddingTop="15dp" />
@@ -35,9 +40,11 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textColorHint="@android:color/darker_gray"
         android:layout_below="@+id/email"
         android:layout_marginTop="27dp"
-        android:hint="Password"
+        android:hint="Enter Password"
         android:paddingLeft="10dp"
         android:inputType="textPassword"
         android:paddingTop="15dp" />
