--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -29,6 +29,9 @@
         android:layout_below="@+id/search_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:divider="#CCCCCC"
+        android:layout_marginTop="15dp"
+        android:dividerHeight="0.5dp"
         android:stackFromBottom="true"
         android:id="@+id/chat_list"
         />
