--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,12 +2,22 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="#FAFAFA"
     android:layout_height="match_parent">
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:src="@drawable/teamsbig"
+        android:layout_marginTop="90dp"
+        android:scaleType="centerInside"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/iconlogo" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/black"
+        android:layout_below="@+id/iconlogo"
         android:layout_centerHorizontal="true"
         android:text="Register new Account"
         android:id="@+id/register"
@@ -57,6 +67,17 @@
         android:layout_marginTop="15dp"
         android:layout_below="@+id/password"
         android:layout_centerHorizontal="true"/>
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Already have a account? Login here"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:gravity="center_horizontal"
+        android:textSize="18sp"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/login"
+        android:layout_centerHorizontal="true"
+        />
 
 </RelativeLayout>
